# lab-06-multithreads

./: .travis.yml  CMakeLists.txt  README.md
_builds/gcc-7-cxx17-pic-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/gcc-7-cxx17-pic-Debug/_3rdParty/Hunter/: install-root-dir
_builds/gcc-7-cxx17-pic-Debug/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/gcc-7-cxx17-pic-Debug/_3rdParty/polly/: saved-arguments
_logs/polly/gcc-7-cxx17-pic/: log-0.txt  log-1.txt  log-10.txt  log-11.txt  log-12.txt  log-13.txt  log-3.txt  log-4.txt  log-5.txt  log-6.txt  log-7.txt  log-8.txt  log-9.txt  log.txt
include/: multithreads.hpp  multithreads.hpp.orig
scripts/: .checks.sh.swp  checks.sh  tests.sh
sources/: main.cpp  main.cpp.orig  source.cpp  source.cpp.orig
tests/: test.cpp  test.cpp.orig
